--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test": "faucet"
   },
   "dependencies": {
+    "blake2s-js": "^1.3.0",
     "datemath-parser": "^1.0.6",
     "debug": "^3.1.0",
+    "docopt": "^0.6.2",
     "fs-extra": "^6.0.1",
     "graceful-fs": "^4.1.11",
+    "json-stable-stringify": "^1.0.1",
+    "keytar": "^4.3.0",
     "leaflet": "^1.3.1",
     "localforage": "^1.7.2",
     "memoizee": "^0.4.14",
@@ -27,14 +31,18 @@
     "ngeohash": "^0.6.0",
     "oyaml": "^0.1.5",
     "polo": "^0.8.1",
-    "proquint": "^0.0.1",
+    "proquint": "0.0.1",
     "pump": "^3.0.0",
+    "readline-sync": "^1.4.9",
+    "scrypt-async": "^2.0.1",
     "sodium-signatures": "^2.1.1",
+    "sodium-universal": "^2.0.0",
     "split-string": "^5.0.4",
     "split2": "^2.2.0",
     "through2": "^2.0.3",
     "tmp": "^0.0.33",
-    "user-home": "^2.0.0"
+    "user-home": "^2.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
