--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "license": "MIT",
   "bin": {
-    "nvivn": "bin/nvivn.js"
+    "nvivn": "bin/simple.js"
   },
   "scripts": {
     "web": "budo src/web/hub --live -- -t babelify",
     "test": "faucet"
   },
   "dependencies": {
+    "ajv": "^6.5.5",
     "blake2s-js": "^1.3.0",
     "datemath-parser": "^1.0.6",
     "debug": "^3.1.0",
