--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ajv": "^6.5.5",
     "blake2s-js": "^1.3.0",
+    "colors": "^1.3.2",
     "datemath-parser": "^1.0.6",
     "debug": "^3.1.0",
     "docopt": "^0.6.2",
