--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "datemath-parser": "^1.0.6",
     "debug": "^3.1.0",
     "docopt": "^0.6.2",
+    "fast-json-stable-stringify": "^2.0.0",
     "fs-extra": "^6.0.1",
     "graceful-fs": "^4.1.11",
-    "json-stable-stringify": "^1.0.1",
     "keytar": "^4.3.0",
     "leaflet": "^1.3.1",
     "localforage": "^1.7.2",
