--- a/package.json
+++ b/package.json
@@ -4,55 +4,22 @@
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "license": "MIT",
   "bin": {
-    "nvivn": "bin/simple.js"
-  },
-  "scripts": {
-    "web": "budo src/web/hub --live -- -t babelify",
-    "test": "faucet"
+    "nvivn": "bin/nvivn.js"
   },
   "dependencies": {
-    "ajv": "^6.5.5",
     "blake2s-js": "^1.3.0",
     "colors": "^1.3.2",
-    "datemath-parser": "^1.0.6",
-    "debug": "^3.1.0",
+    "debug": "^4.1.0",
     "docopt": "^0.6.2",
     "fast-json-stable-stringify": "^2.0.0",
-    "fs-extra": "^6.0.1",
-    "graceful-fs": "^4.1.11",
     "keytar": "^4.3.0",
-    "leaflet": "^1.3.1",
-    "localforage": "^1.7.2",
-    "memoizee": "^0.4.14",
-    "memory-streams": "^0.1.3",
-    "mingo": "^2.2.2",
-    "minimist": "^1.2.0",
-    "multiaddr": "^5.0.0",
     "multibase": "^0.5.0",
-    "multihashes": "^0.4.14",
-    "ngeohash": "^0.6.0",
-    "oyaml": "^0.1.5",
-    "polo": "^0.8.1",
     "proquint": "0.0.1",
-    "pump": "^3.0.0",
     "readline-sync": "^1.4.9",
     "scrypt-async": "^2.0.1",
     "sodium-signatures": "^2.1.1",
     "sodium-universal": "^2.0.0",
-    "split-string": "^5.0.4",
-    "split2": "^2.2.0",
-    "through2": "^2.0.3",
-    "tmp": "^0.0.33",
-    "user-home": "^2.0.0",
+    "split2": "^3.0.0",
     "zxcvbn": "^4.4.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "babelify": "^10.0.0",
-    "budo": "^11.3.2",
-    "faucet": "^0.0.1",
-    "stream-buffers": "^3.0.2",
-    "tap": "^12.0.1"
   }
 }
