--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "nvivn": "bin/nvivn.js"
   },
+  "scripts": {
+    "start": "micro src/web/index.js",
+    "dev": "micro-dev -i messages.txt src/web/index.js"
+  },
   "dependencies": {
     "blake2s-js": "^1.3.0",
     "colors": "^1.3.2",
@@ -15,9 +19,11 @@
     "fast-json-stable-stringify": "^2.0.0",
     "fs-extra": "^7.0.1",
     "keytar": "^4.3.0",
+    "micro": "^9.3.3",
     "mingo": "^2.2.4",
     "multibase": "^0.5.0",
     "ndjson": "^1.5.0",
+    "node-fetch": "^2.2.1",
     "proquint": "0.0.1",
     "readline-sync": "^1.4.9",
     "scrypt-async": "^2.0.1",
@@ -29,6 +35,7 @@
   },
   "devDependencies": {
     "husky": "^1.1.3",
+    "micro-dev": "^3.0.0",
     "prettier": "^1.15.1",
     "pretty-quick": "^1.8.0"
   },
