--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "license": "MIT",
   "bin": {
-    "nvivn": "bin/nvivn.js"
+    "nvivn": "bin/nvivn.js",
+    "nvivn-server": "bin/server.js"
   },
   "scripts": {
     "start": "micro src/web/index.js",
@@ -16,6 +17,7 @@
     "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
+    "dotenv": "^6.1.0",
     "fast-json-stable-stringify": "^2.0.0",
     "fs-extra": "^7.0.1",
     "keytar": "^4.3.0",
