--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "micro src/web/index.js",
-    "dev": "micro-dev -i messages.txt src/web/index.js"
+    "dev": "micro-dev -i messages.txt src/web/index.js",
+    "test": "faucet test/**/*.js"
   },
   "dependencies": {
     "blake2s-js": "^1.3.0",
@@ -36,10 +37,12 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "faucet": "0.0.1",
     "husky": "^1.1.3",
     "micro-dev": "^3.0.0",
     "prettier": "^1.15.1",
-    "pretty-quick": "^1.8.0"
+    "pretty-quick": "^1.8.0",
+    "tap": "^12.0.1"
   },
   "husky": {
     "hooks": {
