--- a/package.json
+++ b/package.json
@@ -3,38 +3,14 @@
   "version": "0.0.1",
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "license": "MIT",
-  "bin": {
-    "nvivn": "bin/nvivn.js",
-    "nvivn-server": "bin/server.js"
-  },
+  "main": "src/index.js",
   "scripts": {
-    "start": "micro src/web/index.js",
-    "dev": "micro-dev -i messages.txt src/web/index.js",
     "test": "faucet test/**/*.js"
   },
   "dependencies": {
-    "blake2s-js": "^1.3.0",
-    "colors": "^1.3.2",
-    "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
-    "docopt": "^0.6.2",
-    "dotenv": "^6.1.0",
-    "fast-json-stable-stringify": "^2.0.0",
-    "fs-extra": "^7.0.1",
-    "keytar": "^4.3.0",
-    "micro": "^9.3.3",
-    "mingo": "^2.2.4",
     "multibase": "^0.5.0",
-    "ndjson": "^1.5.0",
-    "node-fetch": "^2.2.1",
-    "proquint": "0.0.1",
-    "readline-sync": "^1.4.9",
-    "scrypt-async": "^2.0.1",
-    "sodium-signatures": "^2.1.1",
-    "sodium-universal": "^2.0.0",
-    "split2": "^3.0.0",
-    "through2": "^3.0.0",
-    "zxcvbn": "^4.4.2"
+    "sodium-signatures": "^2.1.1"
   },
   "devDependencies": {
     "faucet": "0.0.1",
