--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "debug": "^4.1.0",
+    "fs-extra": "^7.0.1",
+    "lockfile": "^1.0.4",
     "multibase": "^0.5.0",
-    "sodium-signatures": "^2.1.1"
+    "ndjson": "^1.5.0",
+    "sodium-signatures": "^2.1.1",
+    "tmp": "0.0.33"
   },
   "devDependencies": {
     "faucet": "0.0.1",
     "husky": "^1.1.3",
-    "micro-dev": "^3.0.0",
     "prettier": "^1.15.1",
     "pretty-quick": "^1.8.0",
     "tap": "^12.0.1"
