--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "faucet": "0.0.1",
     "husky": "^1.1.3",
+    "levelup": "^3.1.1",
+    "memdown": "^3.0.0",
     "prettier": "^1.15.1",
     "pretty-quick": "^1.8.0",
     "tap": "^12.0.1"
