--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "docopt": "^0.6.2",
     "fs-extra": "^7.0.1",
     "get-stdin": "^6.0.0",
+    "level-ttl": "^3.1.1",
     "lockfile": "^1.0.4",
     "multibase": "^0.5.0",
     "ndjson": "^1.5.0",
@@ -22,6 +23,7 @@
     "tmp": "0.0.33"
   },
   "devDependencies": {
+    "await-sleep": "0.0.1",
     "faucet": "0.0.1",
     "husky": "^1.1.3",
     "levelup": "^3.1.1",
