--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "await-sleep": "0.0.1",
     "faucet": "0.0.1",
     "husky": "^1.1.3",
+    "level": "^4.0.0",
     "levelup": "^3.1.1",
     "memdown": "^3.0.0",
     "prettier": "^1.15.1",
