--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test": "faucet test/**/*.js test/*.js"
   },
   "dependencies": {
+    "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
     "fs-extra": "^7.0.1",
     "get-stdin": "^6.0.0",
     "level-ttl": "^3.1.1",
     "lockfile": "^1.0.4",
+    "mingo": "^2.2.4",
     "multibase": "^0.5.0",
     "ndjson": "^1.5.0",
     "sodium-signatures": "^2.1.1",
