--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "faucet test/**/*.js test/*.js"
   },
   "dependencies": {
+    "blake2s-js": "^1.3.0",
     "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
@@ -22,8 +23,11 @@
     "mingo": "^2.2.4",
     "multibase": "^0.5.0",
     "ndjson": "^1.5.0",
+    "prompt": "^1.0.0",
+    "scrypt-async": "^2.0.1",
     "sodium-signatures": "^2.1.1",
-    "tmp": "0.0.33"
+    "tmp": "0.0.33",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "await-sleep": "0.0.1",
