--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "level": "^4.0.0",
     "levelup": "^3.1.1",
     "memdown": "^3.0.0",
+    "nedb": "^1.8.0",
     "prettier": "^1.15.1",
     "pretty-quick": "^1.8.0",
     "tap": "^12.0.1"
