--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
     "dotenv": "^6.1.0",
+    "fs-blob-store": "^5.2.1",
     "fs-extra": "^7.0.1",
     "get-stdin": "^6.0.0",
     "level-ttl": "^3.1.1",
