--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multibase": "^0.5.0",
     "ndjson": "^1.5.0",
     "oyaml": "^0.1.5",
+    "p-queue": "^3.0.0",
     "prompt": "^1.0.0",
     "scrypt-async": "^2.0.1",
     "sodium-signatures": "^2.1.1",
