--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "nvivn": "bin/nvivn.js"
   },
   "scripts": {
+    "start": "micro src/server/index.js",
+    "dev": "micro-dev src/server/index.js",
     "test": "faucet test/**/*.js test/*.js"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "get-stdin": "^6.0.0",
     "level-ttl": "^3.1.1",
     "lockfile": "^1.0.4",
+    "micro": "^9.3.3",
     "mingo": "^2.2.4",
     "multibase": "^0.5.0",
     "ndjson": "^1.5.0",
@@ -39,6 +42,7 @@
     "level": "^4.0.0",
     "levelup": "^3.1.1",
     "memdown": "^3.0.0",
+    "micro-dev": "^3.0.0",
     "nedb": "^1.8.0",
     "prettier": "^1.15.1",
     "pretty-quick": "^1.8.0",
