--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^6.1.0",
     "fs-blob-store": "^5.2.1",
     "fs-extra": "^7.0.1",
+    "fs-reverse": "0.0.3",
     "get-stdin": "^6.0.0",
     "level-ttl": "^3.1.1",
     "lockfile": "^1.0.4",
