--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mingo": "^2.2.4",
     "multibase": "^0.5.0",
     "ndjson": "^1.5.0",
+    "node-cache": "^4.2.0",
     "oyaml": "^0.1.5",
     "p-queue": "^3.0.0",
     "prompt": "^1.0.0",
