--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
     "dotenv": "^6.1.0",
+    "fecha": "^3.0.0",
     "fs-blob-store": "^5.2.1",
     "fs-extra": "^7.0.1",
     "fs-reverse": "0.0.3",
