--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "blake2s-js": "^1.3.0",
+    "cross-fetch": "^2.2.3",
     "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
