--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "main": "src/index.js",
   "bin": {
-    "nvivn": "bin/nvivn.js"
+    "nvivn": "bin/nvivn.js",
+    "nvivn-server": "src/server/index.js"
   },
   "scripts": {
     "start": "micro src/server/index.js",
