--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "scripts": {
     "start": "micro src/server/index.js",
     "dev": "micro-dev src/server/index.js",
+    "web:dev": "budo src/web/index.js -- -r fs:browserify-fs -t [ babelify --presets [ @babel/preset-env ] --plugins [ @babel/plugin-transform-runtime ] ]",
+    "web:build": "browserify src/web/index.js -r fs:browserify-fs -t [ babelify --presets [ @babel/preset-env ] ] -o dist/bundle.js",
     "test": "faucet test/**/*.js test/*.js"
   },
   "dependencies": {
@@ -20,6 +22,7 @@
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
     "dotenv": "^6.1.0",
+    "es6-promisify": "^6.0.1",
     "fast-json-stable-stringify": "^2.0.0",
     "fecha": "^3.0.0",
     "fs-blob-store": "^5.2.1",
@@ -29,6 +32,7 @@
     "level-ttl": "^3.1.1",
     "lockfile": "^1.0.4",
     "micro": "^9.3.3",
+    "micro-cors": "^0.1.1",
     "mingo": "^2.2.4",
     "ndjson": "^1.5.0",
     "node-cache": "^4.2.0",
@@ -41,7 +45,14 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/runtime": "^7.1.5",
     "await-sleep": "0.0.1",
+    "babelify": "^10.0.0",
+    "browserify-fs": "^1.0.0",
+    "budo": "^11.5.0",
     "faucet": "0.0.1",
     "husky": "^1.1.3",
     "level": "^4.0.0",
