--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "fs-extra": "^7.0.1",
     "fs-reverse": "0.0.3",
     "get-stdin": "^6.0.0",
-    "level-ttl": "^3.1.1",
     "lockfile": "^1.0.4",
     "micro": "^9.3.3",
     "micro-cors": "^0.1.1",
@@ -56,6 +55,7 @@
     "faucet": "0.0.1",
     "husky": "^1.1.3",
     "level": "^4.0.0",
+    "level-browserify": "^2.0.0",
     "levelup": "^3.1.1",
     "memdown": "^3.0.0",
     "micro-dev": "^3.0.0",
