--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "blake2s-js": "^1.3.0",
-    "cross-fetch": "^2.2.3",
     "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
@@ -35,6 +34,7 @@
     "mingo": "^2.2.4",
     "ndjson": "^1.5.0",
     "node-cache": "^4.2.0",
+    "node-fetch": "^2.3.0",
     "oyaml": "^0.1.5",
     "p-queue": "^3.0.0",
     "prompt": "^1.0.0",
