--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "micro": "^9.3.3",
     "micro-cors": "^0.1.1",
     "mingo": "^2.2.4",
+    "monotonic-timestamp": "0.0.9",
     "ndjson": "^1.5.0",
     "node-cache": "^4.2.0",
     "node-fetch": "^2.3.0",
@@ -40,6 +41,7 @@
     "prompt": "^1.0.0",
     "scryptsy": "^2.0.0",
     "sodium-signatures": "^2.1.1",
+    "subleveldown": "^3.0.1",
     "tmp": "0.0.33",
     "zxcvbn": "^4.4.2"
   },
