--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "bin": {
     "nvivn": "bin/nvivn.js",
-    "nvivn-server": "src/server/http.js"
+    "nvivn-server": "src/server/standalone-http.js"
   },
   "scripts": {
     "start": "micro src/server/http.js",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "blake2s-js": "^1.3.0",
+    "cross-fetch": "^2.2.3",
     "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
     "docopt": "^0.6.2",
