--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "events": "^3.0.0",
     "fast-json-stable-stringify": "^2.0.0",
     "fecha": "^3.0.0",
+    "front-matter": "^3.0.1",
     "fs-blob-store": "^5.2.1",
     "fs-extra": "^7.0.1",
     "fs-reverse": "0.0.3",
     "get-stdin": "^6.0.0",
+    "js-yaml": "^3.12.0",
     "lockfile": "^1.0.4",
     "lodash.sortby": "^4.7.0",
     "micro": "^9.3.3",
