--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "faucet test/**/*.js test/*.js"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "blake2s-js": "^1.3.0",
     "cross-fetch": "^2.2.3",
     "datemath-parser": "^1.0.6",
