--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nvivn/core",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "license": "MIT",
   "main": "src/index.js",
@@ -17,6 +17,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "blake2s-js": "^1.3.0",
+    "cron": "^1.5.0",
     "cross-fetch": "^2.2.3",
     "datemath-parser": "^1.0.6",
     "debug": "^4.1.0",
@@ -26,6 +27,7 @@
     "events": "^3.0.0",
     "fast-json-stable-stringify": "^2.0.0",
     "fecha": "^3.0.0",
+    "friendly-cron": "0.0.1",
     "front-matter": "^3.0.1",
     "fs-blob-store": "^5.2.1",
     "fs-extra": "^7.0.1",
