--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "bcryptjs": "^2.4.3",
     "blake2s-js": "^1.3.0",
     "cron": "^1.5.0",
     "cross-fetch": "^2.2.3",
@@ -48,6 +49,7 @@
     "p-queue": "^3.0.0",
     "prompt": "^1.0.0",
     "proper-lockfile": "^3.2.0",
+    "proquint": "0.0.1",
     "scryptsy": "^2.0.0",
     "sodium-signatures": "^2.1.1",
     "subleveldown": "^3.0.1",
