Fixing config stuff

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "get-stdin": "^6.0.0",
     "greenlock-express": "^2.4.10",
     "js-yaml": "^3.12.0",
-    "lockfile": "^1.0.4",
     "lodash.sortby": "^4.7.0",
+    "merge": "^1.2.1",
     "micro": "^9.3.3",
     "micro-cors": "^0.1.1",
     "mingo": "^2.2.4",
@@ -48,7 +48,6 @@
     "oyaml": "^0.1.5",
     "p-queue": "^3.0.0",
     "prompt": "^1.0.0",
-    "proper-lockfile": "^3.2.0",
     "proquint": "0.0.1",
     "scryptsy": "^2.0.0",
     "sodium-signatures": "^2.1.1",
