--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs-reverse": "0.0.3",
     "get-stdin": "^6.0.0",
     "greenlock-express": "^2.4.10",
+    "internal-ip": "^3.0.1",
     "js-yaml": "^3.12.0",
     "lodash.sortby": "^4.7.0",
     "merge": "^1.2.1",
