--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babelify": "^10.0.0",
     "browserify-fs": "^1.0.0",
     "budo": "^11.5.0",
+    "cowsay": "^1.3.1",
     "faucet": "0.0.1",
     "husky": "^1.1.3",
     "level": "^4.0.0",
