--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/runtime": "^7.1.5",
     "await-sleep": "0.0.1",
     "babelify": "^10.0.0",
+    "bonjour": "^3.5.0",
     "browserify-fs": "^1.0.0",
     "budo": "^11.5.0",
     "cowsay": "^1.3.1",
