--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "memdown": "^3.0.0",
     "micro-dev": "^3.0.0",
     "nedb": "^1.8.0",
+    "node-localstorage": "^1.3.1",
     "prettier": "^1.15.1",
     "pretty-quick": "^1.8.0",
     "tap": "^12.0.1"
