--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "assert": "^1.4.1",
     "bcryptjs": "^2.4.3",
     "blake2s-js": "^1.3.0",
+    "chokidar": "^2.0.4",
     "cron": "^1.5.0",
     "cross-fetch": "^2.2.3",
     "datemath-parser": "^1.0.6",
