Adding new node cli, changing some method signatures for consistency

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "internal-ip": "^3.0.1",
     "jayson": "^2.1.0",
     "js-yaml": "^3.12.0",
+    "lockfile": "^1.0.4",
     "lodash.sortby": "^4.7.0",
     "merge": "^1.2.1",
     "micro": "^9.3.3",
@@ -53,6 +54,7 @@
     "prompt": "^1.0.0",
     "proquint": "0.0.1",
     "scryptsy": "^2.0.0",
+    "signal-exit": "^3.0.2",
     "sodium-signatures": "^2.1.1",
     "subleveldown": "^3.0.1",
     "tmp": "0.0.33",
