--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,11 +11,18 @@
   "dependencies": {
     "datemath-parser": "^1.0.6",
     "es6-promisify": "^6.0.1",
+    "fecha": "^3.0.2",
     "flat": "^4.1.0",
+    "fs-blob-store": "^5.2.1",
+    "fs-extra": "^7.0.1",
+    "fs-reverse": "0.0.3",
     "mingo": "^2.2.8",
     "monotonic-timestamp": "0.0.9",
+    "ndjson": "^1.5.0",
+    "p-queue": "^3.0.0",
     "sodium-signatures": "^2.1.1",
-    "subleveldown": "^3.0.1"
+    "subleveldown": "^3.0.1",
+    "tmp": "0.0.33"
   },
   "devDependencies": {
     "faucet": "0.0.1",
