--- a/packages/hub/package.json
+++ b/packages/hub/package.json
@@ -2,12 +2,14 @@
   "name": "@nvivn/hub",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "hub/node.js",
+  "browser": "hub/browser.js",
   "bin": {
     "nvivn": "bin/nvivn.js"
   },
   "scripts": {
-    "test": "faucet test/**/*.js"
+    "test": "faucet test/**/*.js",
+    "build": "browserify hub/browser.js -t uglifyify | terser --compress --mangle -o dist/hub.js"
   },
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "license": "MIT",
@@ -27,11 +29,14 @@
     "oyaml": "^0.1.5"
   },
   "devDependencies": {
+    "browserify": "^16.2.3",
     "faucet": "0.0.1",
     "fs-extra": "^7.0.1",
     "level": "^4.0.0",
     "level-browserify": "^2.0.0",
     "node-localstorage": "^1.3.1",
-    "tap": "^12.1.1"
+    "tap": "^12.1.1",
+    "terser": "^3.13.1",
+    "uglifyify": "^5.0.1"
   }
 }
