--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
   "license": "MIT",
   "scripts": {
     "test": "lerna exec -- npm test"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "devDependencies": {
+    "husky": "^1.2.1",
+    "prettier": "^1.15.3",
+    "pretty-quick": "^1.8.0"
   }
 }
