--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,5 +29,8 @@
     "level": "^4.0.0",
     "level-browserify": "^2.0.0",
     "tap": "^12.1.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
