--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "datemath-parser": "^1.0.6",
     "es6-promisify": "^6.0.1",
+    "fast-json-stable-stringify": "^2.0.0",
     "fecha": "^3.0.2",
     "flat": "^4.1.0",
     "fs-blob-store": "^5.2.1",
