--- a/packages/hub/package.json
+++ b/packages/hub/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "faucet test/**/*.js",
-    "build": "browserify hub/browser.js -t uglifyify | terser --compress --mangle -o dist/hub.js"
+    "build": "browserify hub/browser.js -p tinyify -o dist/hub.js"
   },
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "license": "MIT",
@@ -39,6 +39,7 @@
     "node-localstorage": "^1.3.1",
     "tap": "^12.1.1",
     "terser": "^3.13.1",
+    "tinyify": "^2.5.0",
     "uglifyify": "^5.0.1"
   },
   "publishConfig": {
